# robot-framework

./: CMakeLists.txt  package.xml  readme.md
.github/workflows/: pages-with-encryption.yml
Vision Drone Design File/3D Print/: Battery Stand.stl  Battery Top.stl  Source Two arm v1.stl  Xavier Support.stl  arm_left.stl  arm_right.stl  drone kit.cx3d  pix32 stand.stl  power module case 2.7.stl  power module case.stl  xavier realsense left.stl  xavier realsense right.stl
Vision Drone Design File/Fusion/: pix32 stands v4.f3d
docs/: .gitignore  Dockerfile  Gemfile  _config.yml  _protected_pages.txt  docker-compose.yml  index.md  readme.md
docs/_site/: 404.html  index.html
docs/_site/assets/css/: just-the-docs-dark.css.map  just-the-docs-default.css.map  just-the-docs-light.css.map
docs/_site/assets/js/: just-the-docs.js  search-data.json
docs/_site/docs/: ui-components.html  utilities.html
docs/_site/docs/configuration/: index.html
docs/_site/docs/customization/: index.html
docs/_site/docs/index-test/: index.html
docs/_site/docs/navigation-structure/: index.html
docs/_site/docs/search/: index.html
docs/_site/docs/setup_pi/: index.html
docs/_site/docs/ui-components/buttons/: index.html
docs/_site/docs/ui-components/code/: index.html
docs/_site/docs/ui-components/code/line-numbers/: index.html
docs/_site/docs/ui-components/labels/: index.html
docs/_site/docs/ui-components/lists/: index.html
docs/_site/docs/ui-components/tables/: index.html
docs/_site/docs/ui-components/typography/: index.html
docs/_site/docs/utilities/color/: index.html
docs/_site/docs/utilities/layout/: index.html
docs/_site/docs/utilities/responsive-modifiers/: index.html
docs/_site/docs/utilities/typography/: index.html
docs/docs/: setup_pi.md
docs/documentation_guide/: documentation.md
docs/extra_info/: extra_info.md  gps_firmware_update.md  networking.md  nvidia_xavier_nx_docker.md  pi_setup_rc.md  startup_script.md
docs/flylab/: calibration.md  faqs.md  flylab.md  object.md
docs/px4_robots/: aerial_preflight_checklist.md  crazyflie.md  extra_info.md  first_experiment.md  gps_firmware_update.md  laptop_setup.md  pi_setup_rc.md  px4_robots.md  px4_rover_setup.md  px4_setup.md  px4_small_quad_setup.md  raspi_setup.md  robot_framework_guide.md  ros2_ros1_setup.md  solar_rover_setup.md  startup_script.md
docs/vision_drone/: vision_drone.md  vision_drone_calibration.md  vision_drone_guide.md
docs/vision_drone/motor_calibration_data/: 90PERCENT_2024-10-29_233351.csv  90PERCENT_2024-10-29_233824.csv  90PERCENT_2024-10-29_234227.csv  90PERCENT_2024-10-29_234257.csv  90PERCENT_2024-10-29_234328.csv  StepsTest_2024-10-29_221801.csv  StepsTest_2024-10-29_224128.csv  StepsTest_2024-10-29_230003.csv  StepsTest_2024-10-29_231514.csv
include/dasc_robot/: DASCAerialRobot.hpp  DASCRobot.hpp  DASCRobots.hpp  msg_conversion.hpp  trajectory.hpp
motor_characterization/: Manifest.toml  RS2205s_2300kV_5045prop_coeffs.csv  analyze_data.jl
motor_characterization/data/: characterization_RS2205s_2300kV_5045prop.csv
src/: DASCAerialRobot.cpp  DASCRobots.cpp  check_robot.cpp  dasc_robot_lib.cpp  estop.cpp  example_control.cpp  example_control_geometric.cpp  example_control_geometric_acceleration.cpp  example_control_geometric_velocity.cpp  example_control_multi_rover.cpp  example_quad_circle.cpp  example_quad_circle_trajectory.cpp  example_quad_takeoff_and_land.cpp  example_quad_trefoil.cpp  od.cpp  offboard_control_example.cpp
src/dasc_robots/: pyproject.toml
src/dasc_robots/dasc_robots/: Robot.py  robot.py
src/dasc_robots/examples/: test_run.py
